corrected some fields, they all werent related to different tables. Started with the 3 buttons capability

--- a/2FichaProveedor/Translations/2FichaProveedor.g.xlf
+++ b/2FichaProveedor/Translations/2FichaProveedor.g.xlf
@@ -93,6 +93,186 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Page MasterTableSupplier - Control Type - Property Caption</note>
         </trans-unit>
+        <trans-unit id="PageExtension 2293025083 - Action 322855898 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4055858012">
+          <source>Opens the Master Table Activity page.</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension VendorCardExt - Action Activity Types - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 2293025083 - Action 322855898 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4055858012">
+          <source>Table Activity</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension VendorCardExt - Action Activity Types - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 2293025083 - Action 2262716417 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4055858012">
+          <source>Opens the Master Table Sector page.</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension VendorCardExt - Action Sector Types - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 2293025083 - Action 2262716417 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4055858012">
+          <source>Table Sector</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension VendorCardExt - Action Sector Types - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 2293025083 - Action 521546121 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4055858012">
+          <source>Opens the Master Table Supplier page.</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension VendorCardExt - Action Vendor Types - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 2293025083 - Action 521546121 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4055858012">
+          <source>Table Supplier</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension VendorCardExt - Action Vendor Types - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 2293025083 - Control 3001109929 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4055858012">
+          <source>United Woods</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension VendorCardExt - Control United Woods - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 2293025083 - Control 952633700 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4055858012">
+          <source>Activity Code</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension VendorCardExt - Control Activity Code - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 2293025083 - Control 4022764300 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4055858012">
+          <source>Activity Text</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension VendorCardExt - Control Activity Text - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 2293025083 - Control 2391601916 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4055858012">
+          <source>Certification</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension VendorCardExt - Control Certification - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 2293025083 - Control 2680330430 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4055858012">
+          <source>Chain Custody Subject</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension VendorCardExt - Control Chain Custody Subject - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 2293025083 - Control 22868071 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4055858012">
+          <source>Homologated</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension VendorCardExt - Control Homologated - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 2293025083 - Control 1044011001 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4055858012">
+          <source>Specifies the second name of the vendor.</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension VendorCardExt - Control Second Name - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 2293025083 - Control 1044011001 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4055858012">
+          <source>Name 2</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension VendorCardExt - Control Second Name - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 2293025083 - Control 3608700979 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4055858012">
+          <source>Sector Code</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension VendorCardExt - Control Sector Code - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 2293025083 - Control 1433318075 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4055858012">
+          <source>Sector Text</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension VendorCardExt - Control Sector Text - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 2293025083 - Control 3251587888 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4055858012">
+          <source>Type</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension VendorCardExt - Control Supplier Type - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 2293025083 - Control 8405563 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 4055858012">
+          <source>Sector</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension VendorCardExt - Control Supplier Type Text - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 3990907967 - Field 952633700 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 1936001480">
+          <source>Specifies the activity code.</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension VendorExt - Field Activity Code - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 3990907967 - Field 952633700 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 1936001480">
+          <source>Activity Code</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension VendorExt - Field Activity Code - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 3990907967 - Field 4022764300 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 1936001480">
+          <source>Specifies the activity text.</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension VendorExt - Field Activity Text - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 3990907967 - Field 4022764300 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 1936001480">
+          <source>Activity Text</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension VendorExt - Field Activity Text - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 3990907967 - Field 2391601916 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 1936001480">
+          <source>Specifies the vendor certification.</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension VendorExt - Field Certification - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 3990907967 - Field 2391601916 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 1936001480">
+          <source>Certification</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension VendorExt - Field Certification - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 3990907967 - Field 2680330430 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 1936001480">
+          <source>Indicates whether the vendor is subject to chain of custody requirements.</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension VendorExt - Field Chain Custody Subject - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 3990907967 - Field 2680330430 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 1936001480">
+          <source>Chain Custody Subject</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension VendorExt - Field Chain Custody Subject - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 3990907967 - Field 22868071 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 1936001480">
+          <source>Indicates whether the vendor is homologated.</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension VendorExt - Field Homologated - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 3990907967 - Field 22868071 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 1936001480">
+          <source>Homologated</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension VendorExt - Field Homologated - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 3990907967 - Field 3608700979 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 1936001480">
+          <source>Specifies the sector code.</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension VendorExt - Field Sector Code - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 3990907967 - Field 3608700979 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 1936001480">
+          <source>Sector Code</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension VendorExt - Field Sector Code - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 3990907967 - Field 1433318075 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 1936001480">
+          <source>Specifies the sector text.</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension VendorExt - Field Sector Text - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 3990907967 - Field 1433318075 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 1936001480">
+          <source>Sector Text</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension VendorExt - Field Sector Text - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 3990907967 - Field 2183788467 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 1936001480">
+          <source>Specifies the supplier type.</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension VendorExt - Field Supplier Type Code - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 3990907967 - Field 2183788467 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 1936001480">
+          <source>Supplier Type</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension VendorExt - Field Supplier Type Code - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 3990907967 - Field 8405563 - Property 1295455071" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 1936001480">
+          <source>Specifies the supplier sector.</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension VendorExt - Field Supplier Type Text - Property ToolTip</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 3990907967 - Field 8405563 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 1936001480">
+          <source>Supplier Sector</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension VendorExt - Field Supplier Type Text - Property Caption</note>
+        </trans-unit>
         <trans-unit id="Enum 1521390442 - EnumValue 659317815 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
           <source>Activity</source>
           <note from="Developer" annotates="general" priority="2"></note>
@@ -107,6 +287,21 @@
           <source>Supplier</source>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Enum Master Table Supplier Type - EnumValue Supplier - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Enum 897347080 - EnumValue 4223318242 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>FSC</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Enum Vendor Certification - EnumValue FSC - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Enum 897347080 - EnumValue 136650772 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>PEFC</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Enum Vendor Certification - EnumValue PEFC - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="Enum 897347080 - EnumValue 2205518684 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve">
+          <source>PEFC &amp; FSC</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Enum Vendor Certification - EnumValue PEFC &amp; FSC - Property Caption</note>
         </trans-unit>
         <trans-unit id="PermissionSet 213507007 - Property 2879900210" maxwidth="30" size-unit="char" translate="yes" xml:space="preserve">
           <source>Permissions</source>
